# subline

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  subline.cabal
src/: Subline.hs
test/: Test.hs
